--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node twitter_crawler"
   },
   "dependencies": {
+    "aws-sdk": "^2.478.0",
     "cheerio": "^1.0.0-rc.3",
+    "diff": "^4.0.1",
     "request": "^2.88.0"
   }
 }
