--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.478.0",
     "cheerio": "^1.0.0-rc.3",
+    "cron": "^1.7.1",
     "diff": "^4.0.1",
     "request": "^2.88.0"
   }
