--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "node twitter_crawler"
   },
   "dependencies": {
+    "async": "^3.1.0",
     "aws-sdk": "^2.478.0",
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.7.1",
     "diff": "^4.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
