--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cron": "^1.7.1",
     "diff": "^4.0.1",
+    "log4js": "^4.4.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
